[package]
name = "ff7-viewer"
description = """
A model viewer for the PC version of Final Fantasy 7. Accepts an LGP archive as input.

This is my final project of COIS-4480H: Computer Graphics at Trent University.
"""
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
glfw = "0.47.0"
log = "0.4.17"
simple_logger = "4.0.0"
