[package]
name = "ff7-viewer"
version = "0.1.0"
edition = "2021"
description = "A model viewer for the PC version of Final Fantasy 7."


[workspace]
members = [
    "./crates/ff7",
    "./crates/gfx",
]


[dependencies]
ff7 = { path = "./crates/ff7" }
gfx = { path = "./crates/gfx" }
thiserror = "1.0.38"
